--- a/WebApp-vars.yml
+++ b/WebApp-vars.yml
@@ -1,15 +1,15 @@
-  RequesterEmail: "clements@exakis.com"
-  ResourceGroupName: "RG-TOTAL-DV-WE-EXAKIS"
+  RequesterEmail: "keving@exakis.com"
+  ResourceGroupName: "RG-TOTAL-DV-WE-EXAKIS2"
   RGlocation: "westeurope"
-  SQLServerName: "sqltotalansidp"
+  SQLServerName: "sqltotalansidp2"
   SQLStorageMB: "1024"
   SQLAdminID: "SQLAdminTotal"
   SQLAdminPW: "SQLAdminPW123568!"
-  DBName: "test123"
-  AppServiceName: "TotappService"
+  DBName: "testdb"
+  AppServiceName: "TotappService2"
   AppServiceSKU: "S1"
   NbWorker: "2"
-  WebAppName: "WebTotapp"
+  WebAppName: "WebTotapp2"
   PhpVersion: "7.0"
   template_arm: RBACResourcesGroup.template.json 
   parameters_arm: RBACResourcesGroup.parameters.json
