--- a/play1.yaml
+++ b/play1.yaml
@@ -2,5 +2,11 @@
   name: testping
   hosts: all
   tasks:
+    - name: Install Python-pip in order to launch container
+      apt:
+       name: python-pip
+    - name: isntall ansible
+      pip:
+       name: ansible[azure]
     - name: Ping test
       ping:
