--- a/play1.yaml
+++ b/play1.yaml
@@ -4,4 +4,6 @@
   tasks:
     - name: Ping test
       ping:
+    - debug: var=ansible_all_ipv4_addresses
+    - debug: var=ansible_default_ipv4.address
 
