--- a/Playbook-Test.yml
+++ b/Playbook-Test.yml
@@ -1,6 +1,6 @@
 --- 
 - hosts: all
-  connection: local
+  remote_user: Clements
   tasks:
     - name: "Create a resource group"
       azure_rm_resourcegroup:
